# jackal_desktop

jackal_gui/: CMakeLists.txt  package.xml
jackal_viz/launch/: view_model.launch
jackal_viz/rviz/: robot.rviz
