<?xml version="1.0"?>
<package>
  <name>jackal_gui</name>
  <version>0.0.0</version>
  <description>Jackal's GUI</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <export>
  </export>
</package>
